2009-10-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed grouping to always show group for empty value.
	* Fixed crashing bug when filtering entry with empty title.
	* Fixed compilation for KDE < 4.2.

2009-10-10  Robby Stephenson  <robby@periapsis.org>

	* Added PAM/PRISM translator to SRU fetcher. 

2009-10-07  Robby Stephenson  <robby@periapsis.org>

	* Updated Amazon and Crossref search to no longer store key in the KWallet.

2009-10-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug to allow multiple values in table columns.

2009-09-30  Robby Stephenson  <robby@periapsis.org>

	* Added Wine.com data source.

2009-09-29  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar import support for video games and board games.

2009-09-24  Robby Stephenson  <robby@periapsis.org>

	* Updated ISBNdb.com fetcher and Discogs fetcher to allow user access keys.

2009-09-23  Robby Stephenson  <robby@periapsis.org>

	* Updated the SRU fetcher to leave the response format empty.

2009-09-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed crash when exporting to HTML under certain conditions.
	* Removed the GCcfilms exporter and added the GCstar exporter.

2009-09-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed typo in DTD.

2009-09-20  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.0.

2009-09-07  Robby Stephenson  <robby@periapsis.org>

	* Enabled multiple ISBN and LCCN search for SRU fetcher.

2009-09-06  Robby Stephenson  <robby@periapsis.org>

	* Updated the "Multiple ISBN" dialog box to validate ISBN and CueCat input.

2009-09-04  Robby Stephenson  <robby@periapsis.org>

	* Updated webcam support to use libv4l library.

2009-09-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.0pre2.

2009-08-23  Robby Stephenson  <robby@periapsis.org>

	* Added default fields for entry creation date and last-modified date.
	* Removed dependency on QCA2 library.

2009-08-09  Robby Stephenson  <robby@periapsis.org>
